--- a/public/index.html
+++ b/public/index.html
@@ -143,6 +143,22 @@
       .card--playground {
         grid-column: span 2;
       }
+      .playground-block {
+        border-top: 1px solid rgba(15, 23, 42, 0.08);
+        padding-top: 1.25rem;
+        margin-top: 1.25rem;
+      }
+      .playground-block:first-of-type {
+        border-top: none;
+        padding-top: 0;
+        margin-top: 0;
+      }
+      .playground-block h3 {
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+        font-size: 1.1rem;
+        color: #7c2d12;
+      }
       .card h2 {
         margin-top: 0;
         margin-bottom: 0.85rem;
@@ -184,11 +200,22 @@
         gap: 0.6rem;
         margin-bottom: 1rem;
       }
+      .label-row {
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
       .input-row {
         display: flex;
         gap: 0.6rem;
         flex-wrap: wrap;
         align-items: stretch;
+      }
+      .input-row--split input[type="text"],
+      .input-row--split input[type="number"] {
+        flex: 1 1 180px;
       }
       .input-row input[type="text"] {
         flex: 1 1 220px;
@@ -204,7 +231,8 @@
         font-weight: 600;
         color: #3c2f22;
       }
-      input[type="text"] {
+      input[type="text"],
+      input[type="number"] {
         border-radius: 0.5rem;
         border: 1px solid rgba(148, 81, 32, 0.35);
         padding: 0.7rem 0.9rem;
@@ -212,8 +240,10 @@
         font-family: inherit;
         background: #fff7ed;
         color: inherit;
+        appearance: none;
       }
-      input[type="text"]:focus {
+      input[type="text"]:focus,
+      input[type="number"]:focus {
         outline: 2px solid rgba(249, 115, 22, 0.4);
         border-color: rgba(249, 115, 22, 0.8);
       }
@@ -231,6 +261,20 @@
       }
       button[type="submit"]:hover {
         transform: translateY(-2px);
+      }
+      .geo-button {
+        border: none;
+        background: transparent;
+        color: #ea580c;
+        font-weight: 600;
+        cursor: pointer;
+        padding: 0;
+        text-decoration: underline;
+      }
+      .geo-button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+        text-decoration: none;
       }
       .status {
         min-height: 1.4rem;
@@ -296,10 +340,16 @@
           flex-direction: column;
           gap: 0.4rem;
         }
+        .input-row--split {
+          flex-direction: column;
+        }
         .input-row input[type="text"] {
           width: 100%;
           padding: 0.45rem 0.75rem;
           min-height: 2.4rem;
+        }
+        .input-row--split input[type="number"] {
+          width: 100%;
         }
         .input-row button[type="submit"] {
           width: 100%;
@@ -363,67 +413,126 @@ npm run dev</code></pre>
             <li>
               <span class="tag tag--green">GET</span>
               <code>/health</code>
-              <span>— Health check</span>
             </li>
             <li>
               <span class="tag tag--green">GET</span>
-              <code>/v1/weather/{city}</code>
-              <span>— Get weather for city</span>
+              <code>/v2/weather/{city}</code>
+            </li>
+            <li>
+              <span class="tag tag--green">GET</span>
+              <code>/v2/weather?lat=...&amp;lon=...</code>
             </li>
           </ul>
         </section>
         <section class="card card--playground" id="playground">
           <h2>Playground</h2>
-          <p>
-            Enter a city name and we will fetch
-            <code>/v1/weather/{city}</code> for you.
-          </p>
-          <form id="city-form">
-            <label for="city-input">City name</label>
-            <div class="input-row">
-              <input
-                id="city-input"
-                name="city"
-                type="text"
-                placeholder="Maubin"
-                autocomplete="off"
-              />
-              <button type="submit">Fetch weather</button>
+          <div class="playground-block">
+            <h3>Lookup by city</h3>
+            <p>
+              Enter a city name and we will fetch
+              <code>/v2/weather/{city}</code> for you.
+            </p>
+            <form id="city-form">
+              <label for="city-input">City name</label>
+              <div class="input-row">
+                <input
+                  id="city-input"
+                  name="city"
+                  type="text"
+                  placeholder="Maubin"
+                  autocomplete="off"
+                />
+                <button type="submit">Fetch weather</button>
+              </div>
+            </form>
+            <p id="city-status" class="status" aria-live="polite">
+              Enter a city to begin.
+            </p>
+            <div class="result-box" id="city-result" hidden>
+              <pre><code id="city-response"></code></pre>
             </div>
-          </form>
-          <p id="status" class="status" aria-live="polite">
-            Enter a city to begin.
-          </p>
-          <div class="result-box" id="result" hidden>
-            <pre><code id="response"></code></pre>
+          </div>
+          <div class="playground-block">
+            <h3>Lookup by coordinates</h3>
+            <p>
+              Provide latitude and longitude to call
+              <code>/v2/weather?lat=&amp;lon=</code>.
+            </p>
+            <form id="coords-form">
+              <div class="label-row">
+                <label for="lat-input">Latitude &amp; longitude</label>
+                <button type="button" class="geo-button" id="geo-button">
+                  Use my location
+                </button>
+              </div>
+              <div class="input-row input-row--split">
+                <input
+                  id="lat-input"
+                  name="lat"
+                  type="number"
+                  step="any"
+                  placeholder="16.90"
+                  autocomplete="off"
+                />
+                <input
+                  id="lon-input"
+                  name="lon"
+                  type="number"
+                  step="any"
+                  placeholder="96.12"
+                  autocomplete="off"
+                />
+              </div>
+              <label for="label-input">Optional label</label>
+              <div class="input-row">
+                <input
+                  id="label-input"
+                  name="label"
+                  type="text"
+                  placeholder="Yangon Downtown"
+                  autocomplete="off"
+                />
+                <button type="submit">Fetch by coordinates</button>
+              </div>
+            </form>
+            <p id="coords-status" class="status" aria-live="polite">
+              Provide coordinates to begin.
+            </p>
+            <div class="result-box" id="coords-result" hidden>
+              <pre><code id="coords-response"></code></pre>
+            </div>
           </div>
         </section>
       </main>
     </div>
     <script>
-      const form = document.getElementById("city-form");
-      const statusEl = document.getElementById("status");
-      const responseEl = document.getElementById("response");
-      const resultBox = document.getElementById("result");
+      const cityForm = document.getElementById("city-form");
+      const cityStatus = document.getElementById("city-status");
+      const cityResultBox = document.getElementById("city-result");
+      const cityResponse = document.getElementById("city-response");
 
-      form.addEventListener("submit", async (event) => {
-        event.preventDefault();
-        const cityInput = document.getElementById("city-input");
-        const city = cityInput.value.trim();
+      const coordsForm = document.getElementById("coords-form");
+      const coordsStatus = document.getElementById("coords-status");
+      const coordsResultBox = document.getElementById("coords-result");
+      const coordsResponse = document.getElementById("coords-response");
+      const latInput = document.getElementById("lat-input");
+      const lonInput = document.getElementById("lon-input");
+      const labelInput = document.getElementById("label-input");
+      const geoButton = document.getElementById("geo-button");
 
-        if (!city) {
-          statusEl.dataset.state = "error";
-          statusEl.textContent = "Enter a city name first.";
-          resultBox.hidden = true;
-          return;
-        }
-
+      async function fetchAndRender({
+        url,
+        label,
+        statusEl,
+        resultBox,
+        responseEl,
+      }) {
         statusEl.dataset.state = "loading";
-        statusEl.textContent = `Loading weather for "${city}"...`;
+        statusEl.textContent = `Loading weather for ${label}...`;
         resultBox.hidden = true;
 
         try {
-          const resp = await fetch(`/v1/weather/${encodeURIComponent(city)}`);
+          const resp = await fetch(url);
           if (!resp.ok) {
             throw new Error(`Request failed with status ${resp.status}`);
           }
@@ -431,12 +540,103 @@ npm run dev</code></pre>
           responseEl.textContent = JSON.stringify(data, null, 2);
           resultBox.hidden = false;
           statusEl.dataset.state = "success";
-          statusEl.textContent = `Showing weather for "${city}"`;
+          statusEl.textContent = `Showing weather for ${label}`;
         } catch (error) {
           statusEl.dataset.state = "error";
           statusEl.textContent = error.message;
         }
-      });
+      }
+
+      if (cityForm) {
+        cityForm.addEventListener("submit", (event) => {
+          event.preventDefault();
+          const city = document.getElementById("city-input").value.trim();
+
+          if (!city) {
+            cityStatus.dataset.state = "error";
+            cityStatus.textContent = "Enter a city name first.";
+            cityResultBox.hidden = true;
+            return;
+          }
+
+          fetchAndRender({
+            url: `/v2/weather/${encodeURIComponent(city)}`,
+            label: `"${city}"`,
+            statusEl: cityStatus,
+            resultBox: cityResultBox,
+            responseEl: cityResponse,
+          });
+        });
+      }
+
+      function formatCoords(lat, lon) {
+        return `(${lat.toFixed(2)}, ${lon.toFixed(2)})`;
+      }
+
+      if (coordsForm) {
+        coordsForm.addEventListener("submit", (event) => {
+          event.preventDefault();
+
+          const lat = Number(latInput.value);
+          const lon = Number(lonInput.value);
+
+          if (!Number.isFinite(lat) || !Number.isFinite(lon)) {
+            coordsStatus.dataset.state = "error";
+            coordsStatus.textContent = "Enter both latitude and longitude.";
+            coordsResultBox.hidden = true;
+            return;
+          }
+
+          const params = new URLSearchParams({
+            lat: lat.toString(),
+            lon: lon.toString(),
+          });
+          const label = labelInput.value.trim();
+          if (label) {
+            params.set("label", label);
+          }
+
+          fetchAndRender({
+            url: `/v2/weather?${params.toString()}`,
+            label: label || formatCoords(lat, lon),
+            statusEl: coordsStatus,
+            resultBox: coordsResultBox,
+            responseEl: coordsResponse,
+          });
+        });
+      }
+
+      if (geoButton) {
+        if (!navigator.geolocation) {
+          geoButton.disabled = true;
+          geoButton.textContent = "Location unavailable";
+        } else {
+          geoButton.addEventListener("click", () => {
+            coordsStatus.dataset.state = "loading";
+            coordsStatus.textContent = "Fetching your location...";
+            coordsResultBox.hidden = true;
+            navigator.geolocation.getCurrentPosition(
+              (position) => {
+                const { latitude, longitude } = position.coords;
+                latInput.value = latitude.toFixed(4);
+                lonInput.value = longitude.toFixed(4);
+                if (!labelInput.value.trim()) {
+                  labelInput.value = "My current location";
+                }
+                coordsStatus.dataset.state = "success";
+                coordsStatus.textContent =
+                  "Coordinates ready. Click fetch to load weather.";
+              },
+              (error) => {
+                coordsStatus.dataset.state = "error";
+                coordsStatus.textContent =
+                  error.message || "Unable to retrieve location.";
+              },
+              { enableHighAccuracy: true, timeout: 10000 }
+            );
+          });
+        }
+      }
     </script>
   </body>
 </html>
