Enhance HTML metadata for improved SEO and social sharing

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Laziestant - Weather by City API</title>
+    <title>Weather by City API - Node.js Express Weather Service | Laziestant</title>
+    <meta name="description" content="A Node.js Express API that provides real-time weather information using Open-Meteo API. Get weather by city name or coordinates with mock fallback support." />
+    <meta name="keywords" content="weather api, nodejs, express, open-meteo, weather service, rest api, weather forecast" />
+    <meta name="author" content="Laziestant" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Weather by City API - Node.js Express Weather Service" />
+    <meta property="og:description" content="A Node.js Express API that provides real-time weather information using Open-Meteo API. Get weather by city name or coordinates with mock fallback support." />
+    <meta property="og:image" content="./assets/logo.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Weather by City API - Node.js Express Weather Service" />
+    <meta property="twitter:description" content="A Node.js Express API that provides real-time weather information using Open-Meteo API. Get weather by city name or coordinates with mock fallback support." />
+    <meta property="twitter:image" content="./assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
